--- a/app/src/main/res/layout/item_category_image.xml
+++ b/app/src/main/res/layout/item_category_image.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/sb_size_4"
         app:cardUseCompatPadding="true"
+        app:cardElevation="@dimen/sb_size_0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
