--- a/app/src/main/res/layout/activity_shopping_bag.xml
+++ b/app/src/main/res/layout/activity_shopping_bag.xml
@@ -123,6 +123,7 @@
                 app:layout_constraintTop_toBottomOf="@id/shopping_bag_recycler_view">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/clHeaderProductSuggestion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
