--- a/app/src/main/res/layout/item_suggest_cart_item.xml
+++ b/app/src/main/res/layout/item_suggest_cart_item.xml
@@ -8,7 +8,8 @@
         android:id="@+id/imgProductImage"
         android:layout_width="125dp"
         android:layout_height="165dp"
-        android:background="@color/blue_600"
+        android:background="@color/grey_50"
+        android:scaleType="centerCrop"
         android:layout_marginHorizontal="@dimen/sb_size_5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +34,7 @@
         android:maxLines="1"
         android:text="Product Name"
         android:textColor="@color/blue_grey_900"
-        android:textSize="@dimen/sb_text_size_14"
+        android:textSize="@dimen/sb_text_size_15"
         android:textStyle="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
