--- a/app/src/main/res/layout/item_recently_viewed.xml
+++ b/app/src/main/res/layout/item_recently_viewed.xml
@@ -19,13 +19,11 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:viewBindingIgnore="false">
 
-        <ImageView
+        <com.shopping.bloom.utils.RectangleImageView
             android:id="@+id/img_recently_viewed"
-            android:layout_width="120dp"
-            android:layout_height="165dp"
-            android:contentDescription="@string/wish_list_image"
-            android:scaleType="centerCrop"
-            android:src="@color/grey_300"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="center"
             tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.cardview.widget.CardView>
