--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -62,7 +62,7 @@
 
     </style>
 
-    <style name="Theme.Ecommerce.Theme" parent="Theme.Ecommerce">
+    <style name="Theme.Ecommerce.Theme" parent="Theme.AppCompat.Light.NoActionBar">
 
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/black</item>
