--- a/app/src/main/res/layout/activity_account_security.xml
+++ b/app/src/main/res/layout/activity_account_security.xml
@@ -12,11 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:elevation="@dimen/sb_size_4"
+        android:theme="@style/ToolbarStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-        app:title="Account Security"
+        app:title="@string/account_security"
         app:titleTextColor="@color/black" />
 
     <FrameLayout
@@ -28,7 +30,7 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,54 +45,53 @@
                 android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/sb_size_5"
+                android:layout_marginTop="@dimen/sb_size_2"
                 android:background="@color/white"
                 android:orientation="vertical"
-                android:paddingVertical="@dimen/sb_size_5"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/emailVerifyTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/sb_size_50"
                     android:gravity="center|start"
-                    android:paddingHorizontal="@dimen/sb_size_25"
-                    android:paddingVertical="@dimen/sb_size_15"
-                    android:text="Email Verification"
+                    android:background="?android:selectableItemBackground"
+                    android:paddingHorizontal="@dimen/sb_size_22"
+                    android:text="@string/email_verification"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:drawableEndCompat="@drawable/ic_baseline_right_24" />
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/sb_size_2"
-                    android:background="@color/grey_300" />
+                    android:layout_height="@dimen/sb_size_1"
+                    android:background="@color/grey_100" />
 
                 <TextView
                     android:id="@+id/changePassTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/sb_size_50"
                     android:gravity="center|start"
+                    android:background="?android:selectableItemBackground"
                     android:paddingHorizontal="@dimen/sb_size_25"
-                    android:paddingVertical="@dimen/sb_size_18"
-                    android:text="Change Password"
+                    android:text="@string/change_password"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:drawableEndCompat="@drawable/ic_baseline_right_24" />
 
                 <View
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/sb_size_2"
-                    android:background="@color/grey_300" />
+                    android:layout_height="@dimen/sb_size_1"
+                    android:background="@color/grey_100" />
 
                 <TextView
                     android:id="@+id/deleteAccountTextView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="@dimen/sb_size_50"
                     android:gravity="center|start"
+                    android:background="?android:selectableItemBackground"
                     android:paddingHorizontal="@dimen/sb_size_25"
-                    android:paddingVertical="@dimen/sb_size_15"
-                    android:text="Delete Account"
+                    android:text="@string/delete_account"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:drawableEndCompat="@drawable/ic_baseline_right_24" />
