--- a/app/src/main/res/layout/activity_connect_to_us.xml
+++ b/app/src/main/res/layout/activity_connect_to_us.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
+        android:theme="@style/ToolbarStyle"
+        android:elevation="@dimen/sb_size_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,39 +23,36 @@
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/linearLayout2"
-        android:layout_below="@+id/toolbar"
+        android:layout_height="0dp"
+        android:layout_above="@id/linearLayout2"
+        android:layout_below="@id/toolbar"
         android:fillViewport="true"
-        android:background="@color/grey_200"
+        android:background="@color/grey_100"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/sb_size_10"
             android:paddingBottom="@dimen/sb_size_20"
-            android:background="@color/white"
+            android:background="@color/grey_50"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/sb_size_20"
-                android:gravity="center"
-                android:padding="@dimen/sb_size_5"
+                android:layout_marginVertical="@dimen/sb_size_16"
+                android:gravity="start"
+                android:paddingHorizontal="@dimen/sb_size_18"
                 android:text="Find the most useful answers here"
-                android:textColor="@color/black"
+                android:textColor="@color/blue_grey_900"
                 android:textSize="@dimen/sb_text_size_16"
                 android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/sb_size_10"
-                android:layout_marginHorizontal="@dimen/sb_size_10"
-                android:background="@color/grey_300"
+                android:background="@color/grey_100"
                 android:orientation="horizontal">
 <!--                android:paddingHorizontal="@dimen/sb_size_25"-->
 <!--                android:paddingVertical="@dimen/sb_size_10">-->
@@ -68,13 +67,12 @@
                     android:text="Order Issues"
                     android:padding="@dimen/sb_size_20"
                     android:textAllCaps="false"
-                    android:textColor="@color/black"
+                    android:textColor="@color/grey_700"
                     android:layout_marginEnd="0.5dp"
-                    android:layout_marginTop="1dp"
                     android:textStyle="bold"
                     app:icon="@drawable/ic_unpaid"
                     app:iconGravity="top"
-                    app:iconSize="@dimen/sb_size_30"
+                    app:iconSize="@dimen/sb_size_28"
                     app:iconTint="@color/black" />
 
                 <Button
@@ -82,18 +80,17 @@
                     style="@style/Widget.MaterialComponents.Button.Icon"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="0.5dp"
                     android:layout_weight="1"
                     android:background="@color/white"
-                    android:text="Delivery"
                     android:padding="@dimen/sb_size_20"
-                    android:layout_marginStart="0.5dp"
-                    android:layout_marginVertical="@dimen/sb_size_1"
+                    android:text="Delivery"
                     android:textAllCaps="false"
-                    android:textColor="@color/black"
+                    android:textColor="@color/grey_700"
                     android:textStyle="bold"
                     app:icon="@drawable/ic_shipping"
                     app:iconGravity="top"
-                    app:iconSize="@dimen/sb_size_30"
+                    app:iconSize="@dimen/sb_size_28"
                     app:iconTint="@null" />
 
             </LinearLayout>
@@ -101,8 +98,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/sb_size_10"
-                android:background="@color/grey_300"
+                android:background="@color/grey_100"
                 android:orientation="horizontal">
 
                 <Button
@@ -114,14 +110,15 @@
                     android:padding="@dimen/sb_size_20"
                     android:background="@color/white"
                     android:elevation="@dimen/sb_size_0"
+                    android:layout_marginTop="@dimen/sb_size_1"
                     android:text="Return &amp; Refund"
                     android:textAllCaps="false"
                     android:layout_marginEnd="0.5dp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/grey_700"
                     android:textStyle="bold"
                     app:icon="@drawable/ic_returns"
                     app:iconGravity="top"
-                    app:iconSize="@dimen/sb_size_30"
+                    app:iconSize="@dimen/sb_size_28"
                     app:iconTint="@null" />
 
                 <Button
@@ -131,15 +128,16 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="@dimen/sb_size_20"
+                    android:layout_marginTop="@dimen/sb_size_1"
                     android:background="@color/white"
                     android:text="Payment &amp; Promos"
                     android:textAllCaps="false"
                     android:layout_marginStart="0.5dp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/grey_700"
                     android:textStyle="bold"
                     app:icon="@drawable/ic_wallet"
                     app:iconGravity="top"
-                    app:iconSize="@dimen/sb_size_30"
+                    app:iconSize="@dimen/sb_size_28"
                     app:iconTint="@color/black" />
 
             </LinearLayout>
@@ -147,8 +145,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/grey_300"
-                android:layout_marginHorizontal="@dimen/sb_size_10"
+                android:background="@color/grey_100"
                 android:layout_marginVertical="@dimen/sb_size_1"
                 android:orientation="horizontal">
 
@@ -162,13 +159,13 @@
                     android:background="@color/white"
                     android:text="Product &amp; Stock"
                     android:textAllCaps="false"
-                    android:textColor="@color/black"
+                    android:textColor="@color/grey_700"
                     android:textStyle="bold"
                     app:icon="@drawable/ic_processing"
                     app:iconGravity="top"
                     android:layout_marginEnd="0.5dp"
                     android:layout_marginTop="1dp"
-                    app:iconSize="@dimen/sb_size_30"
+                    app:iconSize="@dimen/sb_size_28"
                     app:iconTint="@color/black" />
 
                 <Button
@@ -183,11 +180,11 @@
                     android:textAllCaps="false"
                     android:layout_marginStart="0.5dp"
                     android:layout_marginTop="1dp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/grey_700"
                     android:textStyle="bold"
                     app:icon="@drawable/ic_profile"
                     app:iconGravity="top"
-                    app:iconSize="@dimen/sb_size_30"
+                    app:iconSize="@dimen/sb_size_28"
                     app:iconTint="@color/black" />
 
             </LinearLayout>
@@ -196,12 +193,13 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
                 android:gravity="center"
-                android:layout_marginTop="@dimen/sb_size_15"
+                android:layout_marginTop="@dimen/sb_size_12"
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:textSize="@dimen/sb_text_size_12"
                     android:padding="@dimen/sb_size_5"
                     android:text="For all Q&amp;As Please Click on our"
                     android:textStyle="bold" />
@@ -213,7 +211,7 @@
                     android:paddingTop="@dimen/sb_size_2"
                     android:gravity="center"
                     android:text="@string/faq"
-                    android:textSize="@dimen/sb_text_size_16"
+                    android:textSize="@dimen/sb_text_size_13"
                     android:textColor="@color/blue_900"
                     android:textStyle="bold" />
 
@@ -222,6 +220,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="@dimen/sb_size_5"
+                    android:textSize="@dimen/sb_text_size_12"
                     android:text="page"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -235,38 +234,38 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
+        android:background="@color/white"
+        android:elevation="@dimen/sb_size_2"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <Button
-            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/white"
-            android:text="Customer Service"
-            android:textColor="@color/black"
+            android:text="@string/customer_service"
+            android:textColor="@color/grey_700"
             android:textSize="@dimen/sb_text_size_13"
             android:textStyle="bold"
             app:icon="@drawable/ic_support"
             app:iconGravity="top"
-            app:iconSize="@dimen/sb_size_25"
+            app:iconSize="@dimen/sb_size_24"
             app:iconTint="@color/black" />
 
         <Button
-            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/white"
-            android:text="Service Records"
-            android:textColor="@color/black"
+            android:text="@string/service_records"
+            android:textColor="@color/grey_700"
             android:textSize="@dimen/sb_text_size_13"
             android:textStyle="bold"
             app:icon="@drawable/ic_service_records"
             app:iconGravity="top"
+            app:iconSize="@dimen/sb_size_24"
             app:iconTint="@color/black" />
     </LinearLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
