--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -134,8 +134,7 @@
                     app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/dummyText2"
-                     />
+                    app:layout_constraintTop_toBottomOf="@+id/dummyText2" />
 
                 <TextView
                     android:id="@+id/dummyText3"
