--- a/app/src/main/res/layout/activity_recently_viewed.xml
+++ b/app/src/main/res/layout/activity_recently_viewed.xml
@@ -71,10 +71,7 @@
                         android:id="@+id/rvRecentlyView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/sb_size_8"
-                        android:layout_marginEnd="@dimen/sb_size_8"
-                        android:paddingStart="@dimen/sb_size_18"
-                        android:paddingEnd="@dimen/sb_size_18" />
+                        android:paddingHorizontal="@dimen/sb_size_4" />
 
                     <ImageView
                         android:layout_width="match_parent"
