--- a/app/src/main/res/layout/activity_wish_list.xml
+++ b/app/src/main/res/layout/activity_wish_list.xml
@@ -13,6 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/white"
         android:theme="@style/ToolbarStyle"
+        android:elevation="@dimen/sb_size_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -72,11 +73,8 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_view"
                         android:layout_width="match_parent"
+                        android:paddingHorizontal="@dimen/sb_size_2"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/sb_size_8"
-                        android:layout_marginEnd="@dimen/sb_size_8"
-                        android:paddingStart="@dimen/sb_size_18"
-                        android:paddingEnd="@dimen/sb_size_18"
                         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                         app:spanCount="2" />
 
