--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:id="@+id/clProductRootView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,19 +12,21 @@
         android:id="@+id/cvDummy"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/sb_size_2"
+        app:cardCornerRadius="@dimen/sb_size_0"
         app:cardElevation="@dimen/sb_size_0"
-        android:layout_marginHorizontal="@dimen/sb_size_2"
+        android:layout_marginHorizontal="@dimen/sb_size_1"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:viewBindingIgnore="false">
 
-        <com.shopping.bloom.utils.RecommendedImageView
+        <!--Height attribute will be neglected make sure to use height_proportion-->
+        <com.shopping.bloom.utils.CustomImageView
             android:id="@+id/img_wishlist"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            custom:height_proportion="1.36"
             android:scaleType="centerCrop"
             tools:src="@color/grey_100" />
 
