--- a/app/src/main/res/layout/item_recently_viewed.xml
+++ b/app/src/main/res/layout/item_recently_viewed.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clProductRootView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/sb_size_4"
+    android:paddingVertical="@dimen/sb_size_6">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvDummy"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/sb_size_6"
-        app:cardCornerRadius="@dimen/sb_size_8"
+        app:cardCornerRadius="@dimen/sb_size_2"
         app:cardElevation="@dimen/sb_size_0"
         app:cardUseCompatPadding="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,11 +20,12 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:viewBindingIgnore="false">
 
-        <com.shopping.bloom.utils.RectangleImageView
+        <com.shopping.bloom.utils.CustomImageView
             android:id="@+id/img_recently_viewed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="center"
+            android:scaleType="centerCrop"
+            app:height_proportion="1.3"
             tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.cardview.widget.CardView>
@@ -31,11 +33,13 @@
     <TextView
         android:id="@+id/txt_recent_name"
         style="@style/MediumText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/sb_size_8"
+        android:ellipsize="end"
         android:fontFamily="@font/gotham_font"
-        android:textColor="@color/grey_900"
+        android:maxLines="1"
+        android:paddingHorizontal="@dimen/sb_size_4"
+        android:textColor="@color/blue_grey_900"
         android:textSize="@dimen/sb_text_size_15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/cvDummy"
