--- a/app/src/main/res/layout/item_recently_viewed_activity.xml
+++ b/app/src/main/res/layout/item_recently_viewed_activity.xml
@@ -5,18 +5,19 @@
     android:id="@+id/clProductRootView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/sb_size_8">
+    android:layout_marginHorizontal="2dp"
+    android:paddingVertical="@dimen/sb_size_4">
 
-    <ImageView
+    <com.shopping.bloom.utils.CustomImageView
         android:id="@+id/img_recently_viewed"
-        android:layout_width="130dp"
-        android:layout_height="170dp"
-        android:layout_marginTop="@dimen/sb_size_8"
-        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:clickable="true"
         android:contentDescription="@string/wish_list_image"
         android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
         android:scaleType="centerCrop"
+        app:height_proportion="1.3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -27,9 +28,12 @@
         style="@style/MediumText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/sb_size_8"
+        android:layout_marginTop="@dimen/sb_size_2"
+        android:ellipsize="end"
         android:fontFamily="@font/gotham_font"
-        android:textColor="@color/grey_900"
+        android:maxLines="1"
+        android:paddingHorizontal="@dimen/sb_size_4"
+        android:textColor="@color/blue_grey_900"
         android:textSize="@dimen/sb_text_size_15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/img_recently_viewed"
