--- a/app/src/main/res/layout/item_wishlist.xml
+++ b/app/src/main/res/layout/item_wishlist.xml
@@ -4,35 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/clProductRootView"
     android:layout_width="match_parent"
-    android:layout_marginHorizontal="@dimen/sb_size_2"
+    android:paddingVertical="@dimen/sb_size_4"
+    android:layout_marginHorizontal="2dp"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvDummy"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="@dimen/sb_size_8"
+        app:cardCornerRadius="@dimen/sb_size_2"
         app:cardElevation="@dimen/sb_size_0"
         app:cardUseCompatPadding="true"
-        app:layout_constraintHeight_max="wrap"
-        app:layout_constraintVertical_bias="0"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:viewBindingIgnore="false">
 
-        <com.shopping.bloom.utils.RectangleImageView
+        <com.shopping.bloom.utils.CustomImageView
             android:id="@+id/img_recently_viewed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"
-            android:paddingHorizontal="2.5dp"
+            app:height_proportion="1.3"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:contentDescription="@string/wish_list_image"
             android:focusable="true"
-            android:scaleType="center"
-            android:src="@color/grey_300"
+            android:scaleType="centerCrop"
             tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.cardview.widget.CardView>
@@ -40,12 +37,14 @@
     <TextView
         android:id="@+id/txt_recent_name"
         style="@style/MediumText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/sb_size_8"
         android:fontFamily="@font/gotham_font"
-        android:textColor="@color/grey_900"
-        android:textSize="@dimen/sb_text_size_16"
+        android:textColor="@color/blue_grey_900"
+        android:paddingHorizontal="@dimen/sb_size_4"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:textSize="@dimen/sb_text_size_15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/cvDummy"
         app:layout_constraintStart_toStartOf="@id/cvDummy"
