--- a/app/src/main/res/layout/layout_recyclerview_random_image.xml
+++ b/app/src/main/res/layout/layout_recyclerview_random_image.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.shopping.bloom.utils.RecommendedImageView
+    <com.shopping.bloom.utils.CustomImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
